Adjust z-index on hero text. Resolves #46

--- a/.dev/sass/layouts/_video-header.scss
+++ b/.dev/sass/layouts/_video-header.scss
@@ -6,7 +6,6 @@
 	.hero,
 	aside.primer-hero-text-widget {
 		position: relative;
-		z-index: 5;
 	}
 
 	#wp-custom-header {
